Updated index.html design

--- a/index.html
+++ b/index.html
@@ -17,40 +17,82 @@
   </head>
 
   <body>
-    <div class="menu-wrap">
-      <input type="checkbox" class="toggler" />
-      <div class="hamburger">
-        <div></div>
-      </div>
-      <div class="menu">
-        <div>
-          <div>
-            <ul>
-              <li><a href="#">Эхлэл</a></li>
-              <li><a href="#">Бидний тухай</a></li>
-              <li><a href="#">Үйлчилгээ</a></li>
-              <li><a href="#">Холбоо барих</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <header id="showcase">
-      <div class="container showcase-container">
-        <h1>Тавтай морил</h1>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nihil
-          accusamus ad ullam molestias sint dolores minima dolorem rerum neque,
-          eveniet hic quasi alias placeat qui consectetur! Eius labore ratione
-          assumenda voluptatibus dolore esse sequi ullam nam, sapiente beatae
-          sunt repudiandae id, error eligendi maiores nesciunt impedit qui
-          explicabo voluptas?
-        </p>
-        <a href="" class="btn"
-          >Цааш нь үзэх <i class="fas fa-arrow-circle-down"></i
+    <!-- Хуудас 1 - Танилцуулга -->
+    <section id="page-1" class="page" class="page">
+      <h1>Миний презентацид тавтай морил</h1>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nihil
+        accusamus ad ullam molestias sint dolores minima dolorem rerum neque,
+        eveniet hic quasi alias placeat qui consectetur! Eius labore ratione
+        assumenda voluptatibus dolore esse sequi ullam nam, sapiente beatae sunt
+        repudiandae id, error eligendi maiores nesciunt impedit qui explicabo
+        voluptas?
+      </p>
+      <div>
+        <a href="page-2" class="btn"
+          >Дараагийн хуудас <i class="fas fa-arrow-circle-down"></i
         ></a>
       </div>
-    </header>
+    </section>
+
+    <!-- Хуудас 2 -->
+    <section id="page-2" class="page">
+      <h1>Хуудас 2</h1>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nihil
+        accusamus ad ullam molestias sint dolores minima dolorem rerum neque,
+        eveniet hic quasi alias placeat qui consectetur! Eius labore ratione
+        assumenda voluptatibus dolore esse sequi ullam nam, sapiente beatae sunt
+        repudiandae id, error eligendi maiores nesciunt impedit qui explicabo
+        voluptas?
+      </p>
+      <div>
+        <a href="page-2" class="btn"
+          >Өмнөх хуудас <i class="fas fa-arrow-circle-up"></i
+        ></a>
+        <a href="page-4" class="btn"
+          >Дараагийн хуудас <i class="fas fa-arrow-circle-down"></i
+        ></a>
+      </div>
+    </section>
+
+    <!-- Хуудас 3 -->
+    <section id="page-3" class="page">
+      <h1>Хуудас 3</h1>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nihil
+        accusamus ad ullam molestias sint dolores minima dolorem rerum neque,
+        eveniet hic quasi alias placeat qui consectetur! Eius labore ratione
+        assumenda voluptatibus dolore esse sequi ullam nam, sapiente beatae sunt
+        repudiandae id, error eligendi maiores nesciunt impedit qui explicabo
+        voluptas?
+      </p>
+      <div>
+        <a href="page-2" class="btn"
+          >Өмнөх хуудас <i class="fas fa-arrow-circle-up"></i
+        ></a>
+        <a href="page-4" class="btn"
+          >Дараагийн хуудас <i class="fas fa-arrow-circle-down"></i
+        ></a>
+      </div>
+    </section>
+
+    <!-- Хуудас 4 -->
+    <section id="page-4" class="page">
+      <h1>Хуудас 4</h1>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex nihil
+        accusamus ad ullam molestias sint dolores minima dolorem rerum neque,
+        eveniet hic quasi alias placeat qui consectetur! Eius labore ratione
+        assumenda voluptatibus dolore esse sequi ullam nam, sapiente beatae sunt
+        repudiandae id, error eligendi maiores nesciunt impedit qui explicabo
+        voluptas?
+      </p>
+      <div>
+        <a href="page-3" class="btn"
+          >Өмнөх хуудас <i class="fas fa-arrow-circle-up"></i
+        ></a>
+      </div>
+    </section>
   </body>
 </html>
