--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         voluptas?
       </p>
       <div>
-        <a href="page-2" class="btn"
+        <a href="#page-2" class="btn"
           >Дараагийн хуудас <i class="fas fa-arrow-circle-down"></i
         ></a>
       </div>
@@ -47,10 +47,10 @@
         voluptas?
       </p>
       <div>
-        <a href="page-2" class="btn"
+        <a href="#page-1" class="btn btn-dark"
           >Өмнөх хуудас <i class="fas fa-arrow-circle-up"></i
         ></a>
-        <a href="page-4" class="btn"
+        <a href="#page-3" class="btn"
           >Дараагийн хуудас <i class="fas fa-arrow-circle-down"></i
         ></a>
       </div>
@@ -68,10 +68,10 @@
         voluptas?
       </p>
       <div>
-        <a href="page-2" class="btn"
+        <a href="#page-2" class="btn btn-dark"
           >Өмнөх хуудас <i class="fas fa-arrow-circle-up"></i
         ></a>
-        <a href="page-4" class="btn"
+        <a href="#page-4" class="btn"
           >Дараагийн хуудас <i class="fas fa-arrow-circle-down"></i
         ></a>
       </div>
@@ -89,7 +89,7 @@
         voluptas?
       </p>
       <div>
-        <a href="page-3" class="btn"
+        <a href="#page-3" class="btn btn-dark"
           >Өмнөх хуудас <i class="fas fa-arrow-circle-up"></i
         ></a>
       </div>
